Parent/Child Bee useradmin section #2

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -817,7 +817,10 @@
   width: 18px;
   height: 18px;
   cursor: pointer;
+  vertical-align: middle;
+  margin-top: 1px; /* Fine-tune vertical alignment */
 }
+
 
 /* Selecting Parent/Child Bee */
 
