--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -804,22 +804,42 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 .radio-option {
   display: flex;
   align-items: center;
+  gap: 10px;
   margin-bottom: 10px;
   font-size: 16px;
   color: var(--text-color);
-  gap: 10px;
+  line-height: 1.2; /* Helps with vertical alignment */
 }
+
 .radio-option input[type="radio"] {
-  accent-color: var(--primary-color);
+  appearance: none;
+  -webkit-appearance: none;
+  background-color: #333;
+  border: 2px solid var(--primary-color);
+  border-radius: 50%;
   width: 18px;
   height: 18px;
+  position: relative;
   cursor: pointer;
+  display: inline-block;
   vertical-align: middle;
-  margin-top: 1px; /* Fine-tune vertical alignment */
 }
+
+.radio-option input[type="radio"]:checked::before {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 8px;
+  height: 8px;
+  background: var(--primary-color);
+  border-radius: 50%;
+}
+
 
 
 /* Selecting Parent/Child Bee */
