Parent/Child Bee useradmin section #5

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -1141,6 +1141,7 @@ document.getElementById("submitUserBtn").addEventListener("click", async () => {
         allUserData[adminEmail] = { users: [], permissions: {} };
       }
       allUserData[adminEmail].users.push(username);
+      allUserData[adminEmail].permissions[username] = role;
       localStorage.setItem("userData", JSON.stringify(allUserData));
 
       // Refresh user list in modal
