Help Center Hidden and Mileena preview deleted

--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -714,12 +714,17 @@
               <p><strong>Buzz Points:</strong> <span id="rewardAmount">0</span> 🍯</p>
           </div>
 
+
+          <!-- Help Center commented out for now.
+
+          
           <div style="position: relative; display: inline-block; margin-bottom: 16px;">
             <button id="helpCenterBtn" class="finished-btn">Help Center</button>
             <span id="offerHelpBadge" class="pulse"></span>
             <span id="needHelpBadge" class="pulse"></span>
         </div>
 
+        -->
           
             <h3>Assigned Tasks:</h3>
             <div id="userTasks" class="task-list">
