Honey -> Buzz Points (only visually)

--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -717,7 +717,7 @@
 
           <!-- Help Center commented out for now.
 
-          
+
           <div style="position: relative; display: inline-block; margin-bottom: 16px;">
             <button id="helpCenterBtn" class="finished-btn">Help Center</button>
             <span id="offerHelpBadge" class="pulse"></span>
@@ -928,7 +928,7 @@ if (isRotation) {
     }
 }
 
-taskHTML += `Honey: ${task.reward || 0} 🍯<br>`;
+taskHTML += `Buzz Points: ${task.reward || 0} 🍯<br>`;
 taskHTML += `Progress: ${isRotation ? turnData.completedCount : userTotal}/${turnData.requiredTimes}<br>`;
 
         taskDiv.innerHTML = taskHTML;
