--- a/mobile/4-Market/addreward.html
+++ b/mobile/4-Market/addreward.html
@@ -151,7 +151,7 @@
       <label for="rewardName">Reward:</label>
       <input type="text" id="rewardName" placeholder="Enter reward" />
       <label for="rewardDiamonds">Buzz Points:</label>
-      <input type="number" id="rewardDiamonds" placeholder="Enter honey cost" min="1" />
+      <input type="number" id="rewardDiamonds" placeholder="Enter Buzz point cost" min="1" />
       <label for="rewardTo">To:</label>
       <input type="text" id="rewardTo" value="Everyone" readonly onclick="openUserSelectModal()" />
 
