--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -770,7 +770,20 @@ async function showTaskDetails(task) {
         ${task.repeat === "Weekly" && task.timesPerWeek ? ` - ${task.timesPerWeek} time(s)/week` : ""}
         ${task.repeat === "Monthly" && task.timesPerMonth ? ` - ${task.timesPerMonth} time(s)/month` : ""}
         <br>
-<strong>Date:</strong> ${task.date || "Unknown"}${(task.toDate && task.toDate !== "3000-01-01" && task.toDate !== task.date) ? ` to ${task.toDate}` : ""}<br>
+
+
+${(() => {
+    const [fromDate, toDate] = (task.date || "").split(" to ");
+    if (!fromDate) return `<strong>Date:</strong> Unknown<br>`;
+    if (!toDate || toDate === "3000-01-01" || toDate === fromDate) {
+        return `<strong>Date:</strong> ${fromDate}<br>`;
+    } else {
+        return `<strong>Date:</strong> ${fromDate} to ${toDate}<br>`;
+    }
+})()}
+
+
+
         <strong>Users:</strong> ${userOrder.join(", ") || "None"}<br>
         ${task.reward && task.reward !== "0" ? `<strong>Reward:</strong> ${task.reward} 🍯<br>` : ""}
     `;
