--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -1098,12 +1098,13 @@ if (task.notes) modalHTML += `<strong>Notes:</strong> ${task.notes}<br>`;
 if (task.room) modalHTML += `<strong>Room:</strong> ${task.room}<br>`;
 modalHTML += `<strong>Reward:</strong> ${task.reward || 0} 🍯<br>`;
 modalHTML += `<strong>Repeat:</strong> ${task.repeat || "Daily"}<br>`;
-if (task.date && task.date !== "3000-01-01") {
-    modalHTML += `<strong>From:</strong> ${task.date}<br>`;
+if (task.date && new Date(task.date).getFullYear() < 3000) {
+    modalHTML += `<strong>From:</strong> ${new Date(task.date).toLocaleDateString()}<br>`;
 }
-if (task.to && task.to !== "3000-01-01") {
-    modalHTML += `<strong>To:</strong> ${task.to}<br>`;
+if (task.to && new Date(task.to).getFullYear() < 3000) {
+    modalHTML += `<strong>To:</strong> ${new Date(task.to).toLocaleDateString()}<br>`;
 }
+
 
 
 
