--- a/register.html
+++ b/register.html
@@ -534,7 +534,7 @@ setTimeout(() => {
         localStorage.setItem("currentAdminEmail", email);
         authForm.reset();
         setTimeout(() => {
-          window.location.href = "login.html";
+          window.location.href = "onboarding.html";
         }, 1000);
       }
     } else {
