--- a/onboarding.html
+++ b/onboarding.html
@@ -55,14 +55,18 @@
     <button onclick="createChild()">Continue</button>
   </div>
 
+
+  
   <div id="step4" class="step">
     <h2>Step 4: Create First Task</h2>
-    <input type="text" id="taskTitle" placeholder="Task Title"><br>
-    <input type="number" id="taskReward" placeholder="Reward (e.g. 10)"><br>
-    <button onclick="createTask()">Create Task</button>
+    <button onclick="goToAddTaskPage()">Create First Task</button>
     <button onclick="skipStep(5)">Skip</button>
   </div>
   
+
+
+
+
 
   <div id="step5" class="step">
     <h2>Step 5: Create First Reward</h2>
@@ -78,6 +82,24 @@
   </div>
 
   <script>
+
+
+window.addEventListener("DOMContentLoaded", () => {
+  const urlParams = new URLSearchParams(window.location.search);
+  const step = parseInt(urlParams.get("step"));
+
+  // Check step param or onboardingReturn flag
+  if (step && step >= 1 && step <= 6) {
+    showStep(step);
+  } else if (localStorage.getItem("onboardingReturn") === "true") {
+    localStorage.removeItem("onboardingReturn");
+    showStep(5); // Continue to reward creation
+  }
+});
+
+
+
+
     const email = localStorage.getItem("currentAdminEmail");
 
     function showStep(stepNum) {
@@ -129,43 +151,9 @@
     }
 
 
-    async function createTask() {
-    const title = document.getElementById("taskTitle").value.trim();
-    const childName = document.getElementById("childName").value.trim();
-    const email = localStorage.getItem("currentAdminEmail");
 
-    if (!title) return alert("Enter a task");
-    if (!childName) return alert("Child user not found");
 
-    const today = new Date().toISOString().split("T")[0];
-    const task = {
-      title,
-      users: [childName],
-      date: `${today} to 3000-01-01`,
-      repeat: "Daily",
-      settings: "Individual",
-      reminder: false,
-      reward: parseInt(document.getElementById("taskReward").value.trim()) || 10,
-      timesPerDay: 1,
-      daysOfWeek: ["Any"]
-    };
 
-    try {
-      const response = await fetch("https://beemazing.onrender.com/api/tasks", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ adminEmail: email, task })
-      });
-
-      const data = await response.json();
-      if (!response.ok || !data.success) throw new Error(data.message || "Failed to save task");
-
-      showStep(5); // proceed to next step
-    } catch (err) {
-      console.error(err);
-      alert("Failed to save task: " + err.message);
-    }
-  }
 
 
 
@@ -191,6 +179,18 @@
     function finishSetup() {
       window.location.href = "userAdmin.html";
     }
+
+
+
+    function goToAddTaskPage() {
+  const childName = document.getElementById("childName").value.trim();
+  if (!childName) return alert("You must first create a child account");
+
+  localStorage.setItem("onboardingChildName", childName); // pass child name
+  localStorage.setItem("onboardingReturn", "true");       // flag to resume onboarding
+  window.location.href = "addTasksOnboarding.html";
+}
+
   </script>
 </body>
 </html>
