--- a/addRewardOnboarding.html
+++ b/addRewardOnboarding.html
@@ -161,11 +161,15 @@
     </div>
   </div>
 
+
+
+  
   <div class="footer">
-    <a href="market.html" id="backLink" aria-label="Back">
-      <img src="/BeeMazing-Y1/mobile/1-Home/BackBtn.png" alt="Back" />
-    </a>
+    <button onclick="window.location.href='onboarding.html?step=6'" style="background: none; border: none; color: var(--accent-color); font-size: 18px; font-weight: bold; cursor: pointer;">
+      Skip
+    </button>
   </div>
+  
 
 
   <div id="userSelectModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:999; align-items:center; justify-content:center;">
